--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
     		<groupId>commons-codec</groupId>
     		<artifactId>commons-codec</artifactId>
     	</dependency>
+    	
+    	<dependency>   
+	    	<groupId>io.springfox</groupId>   
+	    	<artifactId>springfox-boot-starter</artifactId>  
+	    	<version>3.0.0</version> 
+    	</dependency>
 	</dependencies>
 	
 	
