--- a/pom.xml
+++ b/pom.xml
@@ -36,11 +36,19 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+		
+		<!-- dependencia mysql
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
-		</dependency>
+		</dependency> -->
+		
+		<!-- Dependência PostgreSQL -->  
+		<dependency>   
+			<groupId>org.postgresql</groupId>   
+			<artifactId>postgresql</artifactId> 
+		</dependency> 
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
