--- a/pom.xml
+++ b/pom.xml
@@ -37,18 +37,18 @@
 			<optional>true</optional>
 		</dependency>
 		
-		<!-- dependencia mysql
+		<!-- dependencia mysql -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
-		</dependency> -->
+		</dependency> 
 		
-		<!-- Dependência PostgreSQL -->  
+		<!-- Dependência PostgreSQL   
 		<dependency>   
 			<groupId>org.postgresql</groupId>   
 			<artifactId>postgresql</artifactId> 
-		</dependency> 
+		</dependency> -->
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
